# lightdm-greeter-dbus-server

./: CMakeLists.txt  README.md  dbus_lightdm_server.cpp  dbus_lightdm_server.h  greeter_subprocess_runner.cpp  greeter_subprocess_runner.h  lightdmobject.cpp  lightdmobject.h  main.cpp  net.fascode.lightdm.krkr_dbus.xml  settings_manager.cpp  settings_manager.h
